Jann 30/objects/Report_Type_Query__c.object
<CustomObject>
    <fields>
        <fullName>Query_Alias__c</fullName>
        <label>Query Alias</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query_Filter__c</fullName>
        <label>Query Filter</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Query_Id__c</fullName>
        <label>Query Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <label>Report Type</label>
        <referenceTo>Report_Type__c</referenceTo>
        <relationshipLabel>Report Type Queries</relationshipLabel>
        <relationshipName>Report_Type_Queries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Report Type Query</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Report Type Query Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Type Queries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>